# CPP_learning

./: .gitignore  README.md
Battleship_Game/Battleship/: main
Battleship_Game/Battleship_v02/: Makefile  ccolor.h  cmake.txt  enums.h  main  main.cpp
Battleship_Game/Battleship_v03_class/: ccolor.cpp  enums.h  field.cpp  field.h  game.cpp  game.h  main  main.cpp  player.cpp  player.h  readme.md
CPP_Network/: CMakeLists.txt  main.cpp  server.cpp
CPP_Network_client/: client.cpp
CPP_lessons/: CPP_lessons.sln
CPP_lessons/Chapter_1_constants/: Chapter_1_constants.vcxproj  constants.h  main.cpp
CPP_lessons/Chapter_1_multiple_files/: Chapter_1_multiple_files.vcxproj  Chapter_1_multiple_files.vcxproj.filters  getinteger.cpp  main.cpp
CPP_lessons/Chapter_2_lesson_39_task_2/: Chapter_2_lesson_39_task_2.vcxproj  Chapter_2_lesson_39_task_2.vcxproj.filters  lesson_39_task_2.cpp
CPP_lessons/Chapter_2_lesson_44_task_6/: Chapter_2_lesson_44_task_6.vcxproj  lesson_44_task_6.cpp  (+1 more)
CPP_others/: CPP_others.sln
CPP_practice_tasks_Beginner/: CPP_practice_tasks_Beginner.sln
CPP_temp/: enums.h  main  main.cpp  main_temp  temp_vex
CPP_temp2/: CMakeLists.txt  main  main.cpp
CPP_temp3/: main.cpp
CPP_temp_2/: main  main.cpp
Cmake_tutorial/: CMakeLists.txt
Counter/: counter.txt  main  main.cpp  temp.txt
Counter_simple/: main  main.cpp
Creating_and_writing_to_file/: main.cpp
SMFL_fun/: SMFL_fun.sln
opencv-OSX/: cam_shift  detector_people  tutorial.cpp
opencv-WIN/: Cmakelists.txt  cleanup_bg  tutorial.cpp
opencv-setup/: Cmakelists.txt  mask_mouse
(+251 files in other folders)
